--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -30,7 +30,11 @@
     <color name="color_929292">#929292</color>
     <color name="color_36bdff">#36BDFF</color>
     <color name="color_c5e6fc">#C5E6FC</color>
+    <color name="color_a6e4ff">#A6E4FF</color>
+    <color name="color_b9b8b8">#B9B8B8</color>
+    <color name="color_36dbff">#36BDFF</color>
 
+    <color name="color_f1f1f1">#F1F1F1</color>
     <color name="color_d2d2d2">#D2D2D2</color>
     <color name="color_dde0e5">#DDE0E5</color>
     <color name="color_d8d8d8">#D8D8D8</color>
