--- a/app/src/main/res/layout/fragment_edit_timezone.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone.xml
@@ -19,6 +19,7 @@
             android:src="@drawable/ic_nav_back_arrow"/>
 
         <EditText
+            android:textCursorDrawable="@null"
             android:id="@+id/et_information_timezone_find"
             android:background="@null"
             android:layout_centerVertical="true"
@@ -26,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="搜索"
-            android:textColor="#B9DFED"
+            android:textColor="@color/color_white"
             android:textColorHint="#B9DFED"
             android:textSize="18sp"/>
 
@@ -56,12 +57,14 @@
         android:layout_height="match_parent"
         android:background="@color/color_white">
         <ListView
+            android:layout_marginTop="14dp"
             android:background="@color/color_white"
             android:visibility="visible"
             android:focusable="true"
             android:clickable="true"
             android:scrollbars="none"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:id="@+id/lv_information_timezone_detail"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
