--- a/app/src/main/res/layout/fragment_edit_timezone_item.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone_item.xml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                style="@style/information_item"
                 android:layout_width="match_parent"
-                android:layout_height="72dp"
+                android:layout_height="54dp"
                 android:orientation="vertical"
                 android:background="@color/color_white">
 
     <TextView
+        android:layout_marginBottom="19dp"
         android:id="@+id/tv_timezone_item"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="19dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MAC"
         android:textColor="#000000"
         android:textSize="16sp"/>
 
-    <View
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="1dip"
-        android:background="#F3F3F3"/>
 </LinearLayout>
