--- a/app/src/main/res/drawable/icon_share_item_wonderful_selector.xml
+++ b/app/src/main/res/drawable/icon_share_item_wonderful_selector.xml
@@ -2,6 +2,6 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@drawable/icon_share_item_press_wonderful" android:state_checked="true" />
-    <item android:drawable="@drawable/icon_share_item_wonderful" android:state_checked="false" />
+    <item android:drawable="@drawable/icon_wonderful_share_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/icon_wonderful_share_normal" />
 </selector>
