--- a/app/src/main/res/layout/layout_dialog_capture_period.xml
+++ b/app/src/main/res/layout/layout_dialog_capture_period.xml
@@ -22,13 +22,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_margin="14dp"
+            android:layout_marginBottom="16dp"
             android:orientation="horizontal">
 
             <CheckBox
                 android:id="@+id/cb_capture_mon"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/week_pick_selector"
                 android:button="@null"
@@ -36,12 +36,12 @@
                 android:gravity="center"
                 android:text="一"
                 android:textColor="@color/week_pick_button_color_state"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <CheckBox
                 android:id="@+id/cb_capture_tue"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/week_pick_selector"
                 android:button="@null"
@@ -49,12 +49,12 @@
                 android:gravity="center"
                 android:text="二"
                 android:textColor="@color/week_pick_button_color_state"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <CheckBox
                 android:id="@+id/cb_capture_wed"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/week_pick_selector"
                 android:button="@null"
@@ -62,12 +62,12 @@
                 android:gravity="center"
                 android:text="三"
                 android:textColor="@color/week_pick_button_color_state"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <CheckBox
                 android:id="@+id/cb_capture_thur"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/week_pick_selector"
                 android:button="@null"
@@ -75,12 +75,12 @@
                 android:gravity="center"
                 android:text="四"
                 android:textColor="@color/week_pick_button_color_state"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <CheckBox
                 android:id="@+id/cb_capture_fri"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/week_pick_selector"
                 android:button="@null"
@@ -88,12 +88,12 @@
                 android:gravity="center"
                 android:text="五"
                 android:textColor="@color/week_pick_button_color_state"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <CheckBox
                 android:id="@+id/cb_capture_sat"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/week_pick_selector"
                 android:button="@null"
@@ -101,20 +101,20 @@
                 android:gravity="center"
                 android:text="六"
                 android:textColor="@color/week_pick_button_color_state"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
 
             <CheckBox
                 android:id="@+id/cb_capture_sun"
-                android:layout_width="30dp"
-                android:layout_height="30dp"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_margin="5dp"
                 android:background="@drawable/week_pick_selector"
                 android:button="@null"
                 android:checked="false"
                 android:gravity="center"
-                android:text="七"
+                android:text="日"
                 android:textColor="@color/week_pick_button_color_state"
-                android:textSize="18sp" />
+                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 </android.support.v7.widget.CardView>
