--- a/app/src/main/res/layout/layout_settings_item1.xml
+++ b/app/src/main/res/layout/layout_settings_item1.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,7 +15,8 @@
         android:textColor="@color/color_black"
         android:textSize="16sp" />
 
-    <ToggleButton
+    <com.kyleduo.switchbutton.SwitchButton
+        style="@style/SwitchButtonStyleMD"
         android:id="@+id/btn_item_switch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
