--- a/app/src/main/res/layout/layout_settings_item1.xml
+++ b/app/src/main/res/layout/layout_settings_item1.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,10 +15,11 @@
         android:textSize="16sp" />
 
     <com.kyleduo.switchbutton.SwitchButton
-        style="@style/SwitchButtonStyleMD"
         android:id="@+id/btn_item_switch"
+        style="@style/SwitchButtonStyleMD"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|center_vertical"
+        android:checked="true"
         android:gravity="end" />
 </merge>
