--- a/app/src/main/res/layout/fragment_edit_timezone.xml
+++ b/app/src/main/res/layout/fragment_edit_timezone.xml
@@ -57,6 +57,7 @@
         android:layout_height="match_parent"
         android:background="@color/color_white">
         <ListView
+            android:overScrollMode="never"
             android:layout_marginTop="14dp"
             android:background="@color/color_white"
             android:visibility="visible"
