--- a/app/src/main/res/layout/fragment_mag_facility_information.xml
+++ b/app/src/main/res/layout/fragment_mag_facility_information.xml
@@ -30,6 +30,7 @@
     </RelativeLayout>
 
     <ScrollView
+        android:overScrollMode="never"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_white"
