--- a/app/src/main/res/layout/fragment_home_wonderful.xml
+++ b/app/src/main/res/layout/fragment_home_wonderful.xml
@@ -12,8 +12,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rV_wonderful_list"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/color_white">
+            android:layout_height="match_parent">
 
         </android.support.v7.widget.RecyclerView>
 
