--- a/app/src/main/res/layout/layout_item_vedio_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_vedio_wonderful.xml
@@ -2,7 +2,6 @@
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="225dp"
-    android:background="@color/color_white"
     android:clickable="true"
     android:orientation="horizontal"
     android:paddingLeft="10dp"
@@ -18,7 +17,7 @@
         hunt:dashLineWidth="2dp"
         hunt:innerCircleColor="@color/color_e8e8e8"
         hunt:innerCircleRadius="6dp"
-        hunt:innerCircleStrokeWidth="4dp"
+        hunt:outerCircleStrokeWidth="4dp"
         hunt:outerCircleColor="@color/color_white"
         hunt:outerCircleRadius="10dp"
         hunt:outerCircleY="10dp" />
