添加主页空页面

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,6 +59,7 @@
     <color name="color_8C8C8C">#8C8C8C</color>
     <color name="color_FF3D32">#FF3D32</color>
     <color name="color_4C000000">#4C000000</color>
+    <color name="color_33333">#333333</color>
 
 
     <!--纯色-->
