1.完成了门磁页面的主要UI 2.模拟了数据添加进去

--- a/app/src/main/res/layout/fragment_cam_message_list.xml
+++ b/app/src/main/res/layout/fragment_cam_message_list.xml
@@ -100,7 +100,7 @@
                 android:layout_height="35dp"
                 android:layout_alignParentBottom="true"
                 android:layout_centerHorizontal="true"
-                android:background="@color/color_36bdff" />
+                android:background="@color/color_36BDFF" />
 
         </RelativeLayout>
     </RelativeLayout>
