--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,11 +28,9 @@
     <color name="color_e8e8e8">#E8E8E8</color>
     <color name="color_353c41">#353C41</color>
     <color name="color_929292">#929292</color>
-    <color name="color_36bdff">#36BDFF</color>
     <color name="color_c5e6fc">#C5E6FC</color>
     <color name="color_a6e4ff">#A6E4FF</color>
     <color name="color_b9b8b8">#B9B8B8</color>
-    <color name="color_36dbff">#36BDFF</color>
 
     <color name="color_f1f1f1">#F1F1F1</color>
     <color name="color_d2d2d2">#D2D2D2</color>
@@ -48,6 +46,11 @@
     <color name="color_f6f9fa">#F6F9FA</color>
     <color name="color_f4f4f4">#F4F4F4</color>
     <color name="color_36BDFF">#36BDFF</color>
+    <color name="color_f28080">#F28080</color>
+    <color name="color_66bb6a">#66BB6A</color>
+    <color name="color_36bdff">#36BDFF</color>
+    <color name="color_bae3bc">#BAE3BC</color>
+    <color name="color_f8bfbf">#F8BFBF</color>
 
 
     <color name="color_888888">#888888</color>
