--- a/app/src/main/res/layout/activity_mag_live.xml
+++ b/app/src/main/res/layout/activity_mag_live.xml
@@ -1,19 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:clickable="true"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    xmlns:hunt="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:clickable="true"
+    android:orientation="vertical">
+
     <FrameLayout
         android:id="@+id/fLayout_msg_information"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <!-- 标题栏部分 -->
-            <RelativeLayout
-                android:id="@+id/rLayout_mag_live_top_bar"
-                android:layout_width="match_parent"
-                android:layout_height="181dp"
-                android:background="#66bb6a">
+        <RelativeLayout
+            android:id="@+id/rLayout_mag_live_top_bar"
+            android:layout_width="match_parent"
+            android:layout_height="181dp"
+            android:background="#66bb6a">
 
             <ImageView
                 android:id="@+id/imgV_msg_title_top_back"
@@ -24,23 +26,23 @@
                 android:src="@drawable/icon_arrow_back" />
 
             <TextView
-                android:layout_marginTop="10dp"
-                android:layout_toRightOf="@id/imgV_msg_title_top_back"
-                android:layout_marginLeft="10dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_toRightOf="@id/imgV_msg_title_top_back"
                 android:text="门磁"
-                android:textSize="18sp"
-                android:textColor="@color/color_white"/>
+                android:textColor="@color/color_white"
+                android:textSize="18sp" />
 
             <ImageView
                 android:id="@+id/imgV_msg_title_top_door"
-                android:layout_marginTop="62dp"
-                android:layout_marginBottom="12dp"
-                android:layout_centerHorizontal="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/icon_close"/>
+                android:layout_centerHorizontal="true"
+                android:layout_marginBottom="12dp"
+                android:layout_marginTop="62dp"
+                android:src="@drawable/icon_close" />
 
 
             <ImageView
@@ -50,7 +52,7 @@
                 android:layout_alignParentRight="true"
                 android:padding="15dp"
                 android:src="@drawable/icon_setting" />
-            </RelativeLayout>
+        </RelativeLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -67,18 +69,20 @@
             <!-- 放置时间线 -->
             <com.cylan.jiafeigou.widget.FateLineView
                 android:id="@+id/mag_fateline"
-                android:layout_marginTop="21dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                hunt:outerCircleRadius="10dp"
+                hunt:outerCircleColor="#eee000"
+                hunt:innerCircleRadius="5dp"
+                />
 
             <!-- 放置右侧列表 -->
             <ListView
-                android:layout_marginTop="18dp"
-                android:layout_marginLeft="11dp"
                 android:id="@+id/lv_mag_state"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </ListView>
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="11dp"
+                android:layout_marginTop="18dp"></ListView>
         </LinearLayout>
 
     </FrameLayout>
