门铃页面雏形，删除门铃设备

--- a/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
+++ b/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
@@ -1,6 +1,6 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/lLayout_dialog_wifi_list"
+    android:id="@+id/cLayout_dialog_wifi_list"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_white"
@@ -11,4 +11,4 @@
         android:id="@+id/rv_wifi_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</LinearLayout>
+</android.support.v7.widget.CardView>
