--- a/app/src/main/res/layout/layout_item_home_page_list.xml
+++ b/app/src/main/res/layout/layout_item_home_page_list.xml
@@ -15,12 +15,12 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="19dp"
         android:background="@drawable/icon_home_camera_online"
-        hunt:Dradius="4dp"
-        hunt:borderColor="@color/color_white"
-        hunt:borderWidth="1dp"
-        hunt:enableBorder="true"
-        hunt:ignore="true"
-        hunt:showDot="true" />
+        hunt:t_radius="4dp"
+        hunt:t_borderColor="@color/color_white"
+        hunt:t_borderWidth="1dp"
+        hunt:t_enableBorder="true"
+        hunt:t_ignore="true"
+        hunt:t_showDot="true" />
 
     <View
         android:id="@+id/v_icon_base_line_bottom"
