--- a/app/src/main/res/layout/fragment_home_page_list_ext.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_ext.xml
@@ -34,7 +34,7 @@
 
                     <ImageView
                         android:id="@+id/imgV_add_devices"
-                        style="@style/ripple_background"
+                        style="@style/ripple_background_borderless"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end|center_vertical"
