--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -16,7 +16,12 @@
 
     <style name="ripple_background">
         <!--<item name="android:background">?attr/selectableItemBackgroundBorderless</item>-->
-        <item name="android:background">?attr/selectableItemBackgroundBorderless</item>
+        <item name="android:background">?attr/selectableItemBackground</item>
+    </style>
+
+    <style name="ripple_background_borderless">
+        <!--<item name="android:background">?attr/selectableItemBackgroundBorderless</item>-->
+        <item name="android:background">?attr/selectableItemBackground</item>
     </style>
 
     <style name="CamActivityTheme" parent="AppTheme" />
