--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -48,6 +48,11 @@
     <color name="color_f6f9fa">#F6F9FA</color>
     <color name="color_f4f4f4">#F4F4F4</color>
     <color name="color_36BDFF">#36BDFF</color>
+    <color name="color_65CAE4">#65CAE4</color>
+    <color name="color_6C7A92">#6C7A92</color>
+    <color name="color_EFEFEF">#EFEFEF</color>
+    <color name="color_CBCFD0">#CBCFD0</color>
+    <color name="color_F8F8F8">#F8F8F8</color>
 
 
     <color name="color_888888">#888888</color>
