1.将listView改为recycleView 2.使用已经封装好的holder对recycleView进行适配。

--- a/app/src/main/res/layout/activity_mag_live.xml
+++ b/app/src/main/res/layout/activity_mag_live.xml
@@ -57,14 +57,14 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-            <ListView
+            <android.support.v7.widget.RecyclerView
                 android:background="@color/color_white"
                 android:overScrollMode="never"
                 android:scrollbars="none"
-                android:id="@+id/lv_mag_state"
+                android:id="@+id/rv_mag_state"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            </ListView>
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
 
     </FrameLayout>
