--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -65,6 +65,7 @@
     <color name="color_FF3D32">#FF3D32</color>
     <color name="color_4C000000">#4C000000</color>
     <color name="color_33333">#333333</color>
+    <color name="color_E1E1E1">#e1e1e1</color>
 
 
     <!--纯色-->
