--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,9 @@
     <color name="color_f6f9fa">#F6F9FA</color>
     <color name="color_f4f4f4">#F4F4F4</color>
     <color name="color_36BDFF">#36BDFF</color>
+    <color name="color_fdc0c0">#FDC0C0</color>
+    <color name="color_8c8c8c">#8C8C8C</color>
+
 
 
     <color name="color_888888">#888888</color>
