--- a/app/src/main/res/layout/activity_door_bell.xml
+++ b/app/src/main/res/layout/activity_door_bell.xml
@@ -63,6 +63,11 @@
             android:orientation="horizontal"
             android:visibility="gone">
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/color_e8e8e8" />
+
             <TextView
                 android:id="@+id/tv_bell_home_list_cancel"
                 android:layout_width="wrap_content"
