--- a/app/src/main/res/layout/activity_bell_live.xml
+++ b/app/src/main/res/layout/activity_bell_live.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".n.view.bell.BellLiveActivity">
 
     <FrameLayout
@@ -37,11 +38,9 @@
             android:src="@drawable/icon_live_zoom_full_screen" />
     </FrameLayout>
 
-    <Button
-        android:id="@+id/btn_back"
+    <FrameLayout
+        android:id="@+id/fLayout_bell_live_hot"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="back" />
-</FrameLayout>
+        android:layout_height="match_parent">
+    </FrameLayout>
+</LinearLayout>
